class PersonStatus < ApplicationRecord
  has_many :person
end
